made tests, but ran into Java issue