@@ -1,7 +1,7 @@
 plugins {
-	java
-	id("org.springframework.boot") version "4.0.3"
-	id("io.spring.dependency-management") version "1.1.7"
+    id("org.springframework.boot") version "3.2.5"
+    id("io.spring.dependency-management") version "1.1.7"
+    java
 }
 
 group = "com.example"
@@ -28,8 +28,14 @@ dependencies {
 	// Google OAuth2
 	implementation("org.springframework.boot:spring-boot-starter-security")
     implementation("com.google.firebase:firebase-admin:9.2.0")
+
+	// Testing helpers
+	testImplementation("org.springframework.security:spring-security-test")
+	// Needed for Mockito static mocking
+	testImplementation("org.mockito:mockito-inline:5.2.0")
 }
 
-tasks.withType<Test> {
-	useJUnitPlatform()
+tasks.test {
+    useJUnitPlatform()
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
